fix imagepromo on tablet

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
@@ -19,7 +19,7 @@
         align-items: center
         flex-direction: column
 
-        @include breakpoint(tablet, up)
+        @include breakpoint(desktop, up)
             flex-direction: row
 
     &__imagebox
